--- a/shard.yml
+++ b/shard.yml
@@ -6,6 +6,10 @@ authors:
 
 crystal: 0.29.0
 
+dependencies:
+  apatite:
+    github: watzon/apatite
+
 development_dependencies:
   ameba:
     github: veelenga/ameba
